unpackaged/main/default/objects/Commission__c/Commission__c.object-meta.xml
<CustomObject>
    <label>Presales Commission</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Commission No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presales Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>