unpackaged/main/default/objects/Commission__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <inlineHelpText>For Commission Percentage</inlineHelpText>
    <label>Team Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Presales Consultant</fullName>
            </value>
            <value>
                <fullName>Supporting Presales Consultant</fullName>
            </value>
            <value>
                <fullName>Primary Presales Consultant - Split</fullName>
            </value>
            <value>
                <fullName>Supporting Presales Consultant - Split</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>