unpackaged/main/default/objects/Commission__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person who received the Commission</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Presales_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>